Added new update:photo added

--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@ form textarea {
         <!-- Album 2 -->
       <div class="album">
         <div class="album-cover">
-          <img src="404a5862-53d9-44ee-9f52-f3560877caf5.jfif" alt="Album 2">
+          <img src="1.jpg.jfif" alt="Album 2">
           <div class="tracklist">
             <ul>
               <li>Track 1</li>
@@ -1005,7 +1005,7 @@ form textarea {
             </ul>
           </div>
         </div>
-        <h3> 2</h3>
+        <h3> 3</h3>
         <audio controls>
           <source src="song2.mp3" type="audio/mp3">
         </audio>
@@ -1014,7 +1014,7 @@ form textarea {
   <!-- Album 2 -->
       <div class="album">
         <div class="album-cover">
-          <img src="404a5862-53d9-44ee-9f52-f3560877caf5.jfif" alt="Album 2">
+          <img src="931a2187-d1de-4e4a-b236-715f459798b4.jfif" alt="Album 2">
           <div class="tracklist">
             <ul>
               <li>Track 1</li>
@@ -1023,7 +1023,7 @@ form textarea {
             </ul>
           </div>
         </div>
-        <h3> 2</h3>
+        <h3> 4</h3>
         <audio controls>
           <source src="song2.mp3" type="audio/mp3">
         </audio>
@@ -1032,7 +1032,7 @@ form textarea {
   <!-- Album 2 -->
       <div class="album">
         <div class="album-cover">
-          <img src="404a5862-53d9-44ee-9f52-f3560877caf5.jfif" alt="Album 2">
+          <img src="22.jfif" alt="Album 2">
           <div class="tracklist">
             <ul>
               <li>Track 1</li>
@@ -1041,7 +1041,7 @@ form textarea {
             </ul>
           </div>
         </div>
-        <h3> 2</h3>
+        <h3> 5</h3>
         <audio controls>
           <source src="song2.mp3" type="audio/mp3">
         </audio>
@@ -1050,7 +1050,7 @@ form textarea {
   <!-- Album 2 -->
       <div class="album">
         <div class="album-cover">
-          <img src="404a5862-53d9-44ee-9f52-f3560877caf5.jfif" alt="Album 2">
+          <img src="13.jfif" alt="Album 2">
           <div class="tracklist">
             <ul>
               <li>Track 1</li>
@@ -1059,7 +1059,7 @@ form textarea {
             </ul>
           </div>
         </div>
-        <h3> 2</h3>
+        <h3> 6</h3>
         <audio controls>
           <source src="song2.mp3" type="audio/mp3">
         </audio>
